# origin

Lesson 2 Enum Struct/Task 1 Enum/: main.cpp
Module 3/Lesson 2/Task 1/: CMakeLists.txt
Module 3/Lesson 2/Task 2/: CMakeLists.txt  main.cpp
Module 3/Lesson 2/Task 3/: CMakeLists.txt
Module 3/Lesson 3/task1_calculator/: CMakeLists.txt  main.cpp
Module 3/Lesson 3/task2_counter/: CMakeLists.txt  main.cpp
Module_3/Lesson_10/task1_simple_project/: CMakeLists.txt  main.cpp
Module_3/Lesson_10/task2_complex_project/: CMakeLists.txt  figure.cpp  figure.h  main.cpp  rectangle.cpp  rhomb.cpp  square.cpp  square.h  triangle.cpp  triangle.h  triangle_equil.cpp  triangle_equil.h  triangle_isos.h
Module_3/Lesson_2/Task_1/: main.cpp
Module_3/Lesson_3/task2_counter/: main.cpp
Module_3/Lesson_4/task1_address/: CMakeLists.txt  main.cpp
Module_3/Lesson_4/task2_sort_address/: CMakeLists.txt  main.cpp
Module_3/Lesson_5/task1_number_of_sides/: CMakeLists.txt  main.cpp
Module_3/Lesson_5/task2_sides_and_corners/: CMakeLists.txt  main.cpp
Module_3/Lesson_5/task3_figures_methods/: CMakeLists.txt  main.cpp
Module_3/Lesson_6/task1_math_functions/: CMakeLists.txt  main.cpp  math_func.cpp  math_func.h
Module_3/Lesson_6/task2_class/: CMakeLists.txt  class_calculator.cpp  class_calculator.h  main.cpp
Module_3/Lesson_6/task3_class_hierarchy1/: CMakeLists.txt  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.h  rhomb.h  triangle_isos.cpp  triangle_rect.cpp  triangle_rect.h
Module_3/Lesson_7/task1_directives/: CMakeLists.txt  add.cpp  main.cpp
Module_3/Lesson_7/task2_macros_SUB/: CMakeLists.txt  main.cpp
Module_3/Lesson_8/task1/: CMakeLists.txt  function.cpp  function.h  main.cpp
Module_3/Lesson_8/task2/: CMakeLists.txt  figure.cpp  figure.h  main.cpp  my_exception.cpp  my_exception.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  square.cpp  square.h  triangle.cpp  triangle.h  triangle_equil.cpp  triangle_equil.h  triangle_isos.cpp  triangle_isos.h  triangle_rect.cpp  triangle_rect.h
Module_5/lesson_10/task1_clone_matrix/: CMakeLists.txt  main.cpp
Module_5/lesson_10/task2_fix/: CMakeLists.txt
Module_5/lesson_2/: CMakeLists.txt  main.cpp
Module_5/lesson_3/task1_smart_array1/: CMakeLists.txt  main.cpp  smart_array.cpp  smart_array.h
Module_5/lesson_3/task2_copy_smart_array/: CMakeLists.txt  main.cpp  smart_array.cpp  smart_array.h
Module_5/lesson_4/task1/: CMakeLists.txt  main.cpp
Module_5/lesson_4/task2/: CMakeLists.txt  main.cpp
Module_5/lesson_6/task1_char_frequency/: CMakeLists.txt  main.cpp
Module_5/lesson_6/task2_removing_duplicates/: CMakeLists.txt  main.cpp
Module_5/lesson_8/task1_unique_vector/: CMakeLists.txt  main.cpp
Module_5/lesson_8/task2_print_container/: CMakeLists.txt  main.cpp
cppdiplom/access/: README.md  answers.md
module_6/lesson_2/task_1/: sqlcpp_2_1.sql
module_6/lesson_4/: sqlcpp_4_insert.sql  sqlcpp_4_select.sql
module_6/lesson_5/: CMakeLists.txt  main.cpp
module_7/lesson_1/task_1/: main.cpp
module_7/lesson_1/task_2/: main.cpp
module_7/lesson_2/task_1/: main.cpp
module_7/lesson_2/task_2/: CMakeLists.txt  main.cpp
module_7/lesson_2/task_3/: CMakeLists.txt  main.cpp
module_7/lesson_3/task_1/: CMakeLists.txt  main.cpp
module_7/lesson_3/task_2/: main.cpp
module_7/lesson_5/: fedora_clang  fedora_gcc  reverse.cpp
module_8/lesson_1/task_1/: main.cpp
module_8/lesson_1/task_2/: main.cpp
module_8/lesson_2/task_1/: CMakeLists.txt  main.cpp
module_8/lesson_2/task_2/: CMakeLists.txt  main.cpp
module_8/lesson_3/task_1/: CMakeLists.txt  main.cpp
module_8/lesson_3/task_2/: CMakeLists.txt  main.cpp
module_8/lesson_3/task_3/: CMakeLists.txt  main.cpp
module_8/lesson_4/: task1.txt
module_8/lesson_4/task_2/: CMakeLists.txt  main.cpp
module_9/lesson_1/task_1/: CMakeLists.txt  main.cpp
module_9/lesson_2/: CMakeLists.txt  main.cpp
module_9/lesson_3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
module_9/lesson_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
module_9/lesson_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
module_9/lesson_6/: CMakeLists.txt  examplerace.cpp  examplerace.h  mainwindow.cpp  mainwindow.h
module_9/lesson_8/: CMakeLists.txt  dbdata.cpp
module_9/lesson_9/: CMakeLists.txt
Модуль 3 Базовое программирование/2 Структуры и перечисления/Задача 3 Вывод структуры/: main.cpp
